--- a/data/metainfo/org.xfce.xfdashboard.metainfo.xml.in
+++ b/data/metainfo/org.xfce.xfdashboard.metainfo.xml.in
@@ -61,6 +61,12 @@
 	</keywords>
 
 	<releases>
+		<release version="1.0.0" timestamp="1660301987">
+			<description>
+				<_p>This stable release is the first major one :)
+				</_p>
+			</description>
+		</release>
 		<release version="0.9.91" timestamp="1657872321">
 			<description>
 				<_p>This release candidate adds a new last-minute
